# NetGuard-Configuration-Drift-GitOps

./: .gitattributes  .gitignore  LICENSE  NOTICE  README.md  alerting.py  audit_log.md  demo.ps1  devices.yaml.example  drift_engine.py  lab_console.py  policy.yaml  provision_lab.py  pyproject.toml  requirements.txt
baselines/: R1.cfg  R2.cfg  SW1.cfg
configs/intended/: R1.cfg  R2.cfg  SW1.cfg
docs/: architecture.md  runbook.md  screenshot-guide.md
netguard/: __init__.py  alerting.py  audit.py  classifier.py  connector.py  differ.py  gitops.py  inventory.py  normalize.py  remediation.py  reporting.py
tests/: conftest.py  test_classifier.py  test_differ.py  test_inventory.py  test_normalize.py  test_remediation.py
